samples/_failures_safe/1761549173_c81539_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd840671.c: In function ‘main’:
./samples/SAFE/__tmp_dd840671.c:146:17: error: expected ‘;’ at end of input
  146 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_dd840671.c:146:9: error: expected declaration or statement at end of input
  146 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_dd840671.c:146:9: error: expected declaration or statement at end of input
